# superseedr

./: .env.example  .gitignore  .gluetun.env.example  CHANGELOG.md  Cargo.toml  Dockerfile  FEATURE_REVIEW.md  LICENSE.txt  README.md  ROADMAP.md  TRIAGE.md  docker-compose.common.yml  docker-compose.openvpn.yml  docker-compose.standalone.yml  docker-compose.wireguard.yml  docker-compose.yml  gluetun.env.example
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: integration-interop.yml  integration-tests.yml  rust.yml
agentic_plans/: cli_control_status_and_journal_plan_2026-03-17.md  cli_control_status_testing.md  network_history_persistence_async_restore_plan_2026-02-24.md  non_aligned_piece_local_refactor_plan.md  rss_tui_selection_implementation_plan.md  tui_architecture_refactor.md  tui_theming_engine.md
assets/: app_icon.icns
build_scripts/: build_osx.sh  build_osx_universal_pkg.sh
compose/openvpn/: docker-compose.openvpn.yml
compose/openvpn/vpn-config/: auth.txt.example  superseedr.opvn.example
compose/wireguard/: docker-compose.wireguard.yml
compose/wireguard/wireguard-config/: wg0.conf.example
docs/: shared-config.md  tuning.md
integration_tests/: README.md  docker-compose.yml  generate_magnets.py  requirements.txt  run_tests.py
integration_tests/config/: settings.toml
integration_tests/docker/: docker-compose.interop.yml
integration_tests/harness/: pytest.ini
integration_tests/harness/clients/: qbittorrent.py
integration_tests/harness/scenarios/: superseedr_to_superseedr.py
integration_tests/harness/tests/: test_qbittorrent_auth_interop.py  test_stub_adapters.py
integration_tests/scripts/: tracker.py
integration_tests/src/: __init__.py  qbittorrent_client.py  scenarios.py  superseedr_monitor.py  torrent_generator.py  transmission_client.py
integration_tests/torrents/: hybrid_multi_file.torrent  hybrid_nested.torrent  hybrid_test.bin.torrent  v1_multi_file.torrent  v1_nested.torrent  v1_test.bin.torrent  v2_multi_file.torrent  v2_nested.torrent  v2_test.bin.torrent  v2_test.bin.torrent.backup
local_scripts/: build_m1_mac.sh  docker_build.sh  docker_publish.sh  docker_run.sh  get_process_FDs.sh  git_tag.sh  grep_io_errors.sh  tokio-console.sh  working_m1_mac.sh
packaging/macos/: Info.plist  Info.plist.template
packaging/windows/: wix-template.xml
proptest-regressions/torrent_manager/: state.txt
scripts/: file_descriptors_printout.sh
src/: app.rs  command.rs  config.rs  control_service.rs  errors.rs  fs_atomic.rs  integrity_scheduler.rs  main.rs  resource_manager.rs  storage.rs  theme.rs  token_bucket.rs  tui.rs  tui_events.rs  tui_formatters.rs  watch_inbox.rs
src/integrations/: cli.rs  control.rs  mod.rs  rss_ingest.rs  rss_service.rs  status.rs  watcher.rs
src/networking/: mod.rs  protocol.rs  session.rs  web_seed_worker.rs
src/persistence/: README.md  activity_history.rs  event_journal.rs  network_history.rs  rss.rs
src/storage/: mod.rs
src/telemetry/: activity_history_telemetry.rs  mod.rs  network_history_telemetry.rs  ui_telemetry.rs
src/torrent_file/: mod.rs  parser.rs
src/torrent_manager/: block_manager.rs  manager.rs  mod.rs  piece_manager.rs  state.rs
src/tracker/: client.rs  mod.rs
src/tui/: README.md  events.rs  formatters.rs  layout.rs  mod.rs  particles.rs  view.rs
src/tui/layout/: normal.rs
src/tui/screens/: browser.rs  config.rs  delete_confirm.rs  help.rs  journal.rs  mod.rs  normal.rs  power.rs  rss.rs  welcome.rs
src/tuning/: mod.rs
wix/: main.wxs
