# SPDX-FileCopyrightText: 2025 Jaga Tranvo
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "superseedr"
version = "1.0.0"
description = "Terminal-based BitTorrent client written in Rust using Ratatui."
edition = "2021"
repository = "https://github.com/Jagalite/superseedr"
license = "GPL-3.0-or-later"

[dev-dependencies]
tempfile = "3.23.0"

[dependencies]
linked-hash-map = "0.5.6"
percent-encoding = "2.3.2"
reqwest = "0.12.24"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["full"] }
console-subscriber = "0.4.1"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11.19"
magnet-url = "3.0.0"
mainline = "6.0.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
data-encoding = "2.9.0"
bendy = { version = "0.6.0", features = ["serde"] }
urlencoding = "2.1.3"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.29.0"
arboard = "3.4.0"
rand = "0.9.2"
directories = "6.0"
toml = "0.9.8"
hex = "0.4"
lazy_static = "1.5.0"
sysinfo = "0.37.2"
tracing-appender = "0.2" 
ratatui-explorer = "0.2.0" 
strum = "0.27.2"
strum_macros = "0.26.2"
figment = { version = "0.10", features = ["toml", "env"] }
ratatui-textarea = "0.4.0"
notify = { version = "8.2.0", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
fs2 = "0.4.3"
rlimit = "0.10"

[package.metadata.bundle]
name = "superseedr"
identifier = "com.github.jagalite.superseedr"
# icon = ["packaging/macos/icon.icns"] # Optional: Uncomment and provide path if you have an icon
version = "1.0.0" 
copyright = "Copyright © 2025 Jaga Tranvo. All rights reserved." 
category = "public.app-category.utilities" 
short_description = "Terminal-based BitTorrent client." 
long_description = """
Terminal-based BitTorrent client written in Rust using Ratatui.
""" 
plist_path = "packaging/macos/Info.plist.template" 
