# SPDX-FileCopyrightText: 2025 Jaga Tranvo
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "superseedr"
version = "0.9.9"
description = "A BitTorrent Client in your Terminal."
edition = "2021"
repository = "https://github.com/Jagalite/superseedr"
license = "GPL-3.0-or-later"


authors = ["Jaga Tranvo <jagatranvo@prudential.com>"]  # <-- ADD THIS

[package.metadata.wix]
eula = false

[features]
# Default build includes both DHT and PEX
default = ["dht", "pex"]

# Individual features for conditional compilation
dht = ["dep:mainline"]
pex = []

[dev-dependencies]
tempfile = "3.23.0"

[dependencies]
reqwest = "0.12.24"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2" 
serde = { version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11.19"
magnet-url = "3.0.0"
mainline = { version = "6.0.0", optional = true }
data-encoding = "2.9.0"
urlencoding = "2.1.3"
crossterm = "0.29.0"
ratatui = "0.29.0"
rand = "0.9.2"
directories = "6.0"
toml = "0.9.8"
hex = "0.4"
sysinfo = "0.37.2"
ratatui-explorer = "0.2.0" 
strum = "0.27.2"
strum_macros = "0.26.2"
figment = { version = "0.10", features = ["toml", "env"] }
notify = { version = "8.2.0", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
fs2 = "0.4.3"
rlimit = "0.10"

[target.'cfg(windows)'.dependencies]
clipboard = "0.5.0"

[package.metadata.bundle]
name = "superseedr"
identifier = "com.github.jagalite.superseedr"
# icon = ["packaging/macos/icon.icns"] # Optional: Uncomment and provide path if you have an icon
version = "0.9.9"
copyright = "Copyright © 2025 Jaga Tranvo. All rights reserved."
category = "public.app-category.utilities"
short_description = "A BitTorrent Client in your Terminal."
long_description = "A BitTorrent Client in your Terminal, written in Rust using Ratatui."

linux_use_terminal = true
linux_mime_types = ["application/x-bittorrent", "x-scheme-handler/magnet"]
linux_exec_args = "%U" # Use %U to handle URLs and potentially multiple files, or %f for single files
deb_depends = ["libxcb-render0", "libxcb-shape0", "libxcb-xfixes0"]

osx_url_schemes = ["magnet"]

# --- This is the crucial part for Windows MSI ---
[package.metadata.bundle.wix]
template-path = "packaging/windows/wix-template.xml"
# This creates a "per-machine" installer (requires admin)
# that puts the app in "C:\Program Files"
install-scope = "perMachine"

# --- This section handles magnet: links ---
[[package.metadata.bundle.wix.protocols]]
name = "magnet"
# This command tells Windows to run "superseedr.exe %1"
# The "%1" is the magnet link itself.
command = "superseedr" 

# --- This section handles .torrent files ---
[[package.metadata.bundle.file_associations]]
ext = "torrent"
name = "BitTorrent File"
description = "BitTorrent File"
# The name of the .exe from your [package] section
command = "superseedr"

